@@ -4,6 +4,7 @@ Overview of changes in lightdm 0.9.5
     * Correctly load seat type in multi seat configuration
     * Add display-setup, session-setup and session-cleanup scripting hooks
     * Fix cancel button in GTK greeter
+    * Fix line through GTK greeter menu items
 
 Overview of changes in lightdm 0.9.4
 
